--- a/A2/startup.ipynb
+++ b/A2/startup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "1862234"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "2"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "1862234"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "3"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "  'ago.']]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
        "  'sedan.']]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        " ('we', 522879)]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
        " ('vi', 539808)]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
        "   ['återupptagande', 'av', 'sessionen']))]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "1848423"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "62071"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
        "26683"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
        "   ['det', 'har', 'inte', 'ändrats.']))]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
        " ('the', 'jag')]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
        " ('debate', 'är')]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,19 +823,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# release the cores for another application!\n",
-    "#spark_context.stop()"
+    "spark_context.stop()"
    ]
   }
  ],
