--- a/A2/sectionB.ipynb
+++ b/A2/sectionB.ipynb
@@ -119,10 +119,30 @@
     {
      "data": {
       "text/plain": [
-       "10"
+       "9257460"
       ]
      },
      "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_frame.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +171,7 @@
        "[Row(max(Fine amount)=505.0)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +192,7 @@
        "6"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -220,12 +240,12 @@
     }
    ],
    "source": [
-    "maker = data_frame.groupBy(\"Make\").count().sort(\"count\" , ascending = False).show(20)\n"
+    "data_frame.groupBy(\"Make\").count().sort(\"count\" , ascending = False).show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -273,32 +293,25 @@
       "|color long| count|\n",
       "+----------+------+\n",
       "|      Gray|346822|\n",
-      "|     White|304620|\n",
-      "|     Black|252199|\n",
-      "|    Silver|248685|\n",
-      "|      Blue|128051|\n",
-      "|       Red| 84175|\n",
-      "|     Green| 57627|\n",
-      "|      Gold| 30154|\n",
-      "|    Maroon| 19882|\n",
-      "|       Tan| 17006|\n",
       "+----------+------+\n",
-      "only showing top 10 rows\n",
+      "only showing top 1 row\n",
       "\n"
      ]
     }
    ],
    "source": [
     "toyt = dfcolor.filter(dfcolor[\"Make\"] == \"TOYT\")\n",
-    "clr = toyt.groupBy(\"color long\").count().sort(\"count\" , ascending = False).show(10)"
+    "toyt.groupBy(\"color long\").count().sort(\"count\" , ascending = False).show(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "spark_session.stop()"
+   ]
   }
  ],
  "metadata": {
